--- a/ML practice.ipynb
+++ b/ML practice.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "import joblib\n",
+    "from sklearn import tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,48 +29,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# learning and predicting\n",
-    "model = DecisionTreeClassifier()\n",
-    "model.fit(X, y)\n",
-    "predictions = model.predict([[21,1], [22,0]])"
+    "# model = DecisionTreeClassifier()\n",
+    "# model.fit(X, y)\n",
+    "# predictions = model.predict([[21,1], [22,0]])\n",
+    "# predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating accuracy of model\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y ,test_size = 0.2)\n",
+    "# models = DecisionTreeClassifier()\n",
+    "# models.fit(X_train, y_train)\n",
+    "# prediction = models.predict(X_test)\n",
+    "# score = accuracy_score(y_test,prediction)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "['music-recommender.joblib']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculating accuracy of model\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y ,test_size = 0.2)\n",
-    "models = DecisionTreeClassifier()\n",
-    "models.fit(X_train, y_train)\n",
-    "prediction = models.predict(X_test)\n",
-    "score = accuracy_score(y_test,prediction)\n",
-    "score"
+    "joblib.dump(model,\"music-recommender.joblib\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['HipHop'], dtype=object)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = joblib.load(\"music-recommender.joblib\")\n",
+    "prediction = model.predict([[21,1]])\n",
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tree.export_graphviz(model,out_file = \"music-recommender.dot\", feature_names =['age','gender'],\n",
+    "                    class_names = sorted(y.unique()),rounded=True,filled=True,label='all')"
+   ]
   }
  ],
  "metadata": {
